# DriftSentinel

./: .codacy.yml  .env.example  .gitignore  .pre-commit-config.yaml  .snyk  AGENTS.md  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  DIRECTIVES.md  Makefile  README.md  SECURITY.md  codecov.yaml  databricks.yml  pyproject.toml  requirements.txt
.claude/: README.md
.codacy/: README.md  codacy.yaml
.github/: FUNDING.yml
adws/: README.md
app/: README.md  __init__.py  analytics.py  app.py  app.yaml  requirements.txt
assets/: README.md
docs/: README.md  architecture.md  customer_impact_advisory.md  deployment_guide.md  e2e_verification_prompt.md  github_project_sync.md  marketplace_distribution.md  notion_dashboard_sync.md  operations_guide.md
notebooks/: 00_quickstart_setup.py  01_register_dataset.py  02_seed_or_import_baseline.py  03_run_intake_controls.py  04_run_drift_gate.py  05_run_control_benchmark.py  06_review_evidence.py  07_run_dataset_pipeline.py  README.md
report/: 2026-04-01-notion-sync-payload.md  2026-04-01T17-49-06-notion-sync-record.md  2026-04-02T00-54-22-notion-sync-record.md  2026-04-02T01-27-10-notion-sync-record.md  2026-04-02T01-53-48-notion-sync-record.md  2026-04-02T02-10-29-notion-sync-record.md  2026-04-02T02-38-34-notion-sync-record.md  2026-04-02T05-53-34-notion-sync-record.md  2026-04-02T06-57-notion-sync-record.md  2026-04-02T07-17-bundle-validation-evidence.md  2026-04-02T07-36-36Z-bundle-proof-reconciliation.md  2026-04-02T07-44-notion-sync-record.md  2026-04-02T09-41-57Z-phase4-app-proof-repair.md  2026-04-02T13-36-notion-sync-record.md  2026-04-02T14-40-20Z-dependency-vulnerability-triage.md  2026-04-02T16-38-44Z-notion-sync-record.md  2026-04-02T16-42-53Z-notion-sync-record.md  2026-04-02T16-56-00Z-quality-surface-reconciliation.md  2026-04-02T17-15-00Z-notion-sync-record.md  2026-04-02T20-48-notion-sync-record.md  2026-04-02T21-04-notion-sync-record.md  2026-04-02T21-25-notion-sync-record.md  2026-04-02T21-58-notion-sync-record.md  2026-04-02T22-10-notion-sync-record.md  2026-04-02T23-23-notion-sync-record.md  2026-04-03T00-21-notion-sync-record.md  2026-04-03T00-40-notion-sync-record.md  2026-04-03T00-55-03Z-stress-test-performance-optimization.md  2026-04-03T01-05-notion-sync-record.md  2026-04-03T01-21-28Z-phase5-marketplace-prep.md  2026-04-03T01-32-notion-sync-record.md  2026-04-03T01-40-bundle-validation-evidence.md  2026-04-03T02-34-notion-sync-record.md  2026-04-03T03-49-40Z-readiness-reconciliation.md  2026-04-03T04-15-notion-sync-record.md  2026-04-03T14-05-31-notion-sync-record.md  2026-04-03T19-30-00-notion-sync-record.md  2026-04-03T20-00-00-notion-sync-record.md  2026-04-04T05-04-notion-sync-record.md  (+26 more)
(+177 files in other folders)
