[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "driftsentinel"
version = "0.1.0"
description = "Enterprise Data Trust — Chapter 4: Unified Drift Monitoring Application"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Anthony Johnson" },
]
dependencies = [
    "pyyaml>=6.0",
    "pandas>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
    "types-PyYAML>=6.0",
]
databricks = [
    "databricks-sdk>=0.20",
]
docs = [
    "matplotlib>=3.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/driftsentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
