[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "etherealogic-driftsentinel"
version = "0.1.0"
description = "Enterprise Data Trust — Chapter 4: Unified Drift Monitoring Application"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Anthony Johnson" },
]
dependencies = [
    "deltalake>=0.19",
    "fastavro>=1.9",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "pyarrow>=16.0",
    "pyxlsb>=1.0",
    "xlrd>=2.0",
]

[dependency-groups]
app = [
    "gradio>=6.10.0,<7",
    "plotly>=5.0,<6",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
    "types-PyYAML>=6.0",
    "playwright>=1.58.0",
]
databricks = [
    "databricks-sdk>=0.20",
]
docs = [
    "matplotlib>=3.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/driftsentinel"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "driftsentinel/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
# Databricks notebooks use runtime-injected globals (dbutils) and multi-cell
# import patterns that are not compatible with standard linting rules.
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Databricks notebooks and the App use runtime-injected globals/deps and are not type-checked.
exclude = ["notebooks", "app"]
